package org.cipher.utils;

/**
 * This simple enumerator contains only <b> SHIFT OPERATORS </b>
 *
 * @author Piotr 'pitrecki' Nowak
 * @version 0.0.1
 * Created by Pitrecki on 2016-10-20.
 */
public enum Sign
{
    PLUS, MINUS
}
